# a2_ros

./: .gitignore  .gitmodules  CLAUDE.md  README.md  compose.yaml  enter_nuc  setup_host
.github/workflows/: docker-publish.yaml
config/record/: nav_nicole.yaml
data/: detections.csv  detections.csv.bak
docs/: far_planner_tuning.md
environment/: Dockerfile.dev
rosbag2_2026_06_25-08_45_07/: metadata.yaml
scripts/: a2  a2_shell.sh  build_workspace.sh  decompress.sh  export_images.sh  post_process.py
scripts/pc2/: install.sh  pc2_joy.sh  pc2_launch.service
scripts/terrain_sweep/: .gitignore  README.md  analyze.py  axes.yaml  gen_variants.py  run_sweep.sh
src/core/a2_deployment_config/scripts/: setup_zenoh.sh
src/meta_packages/a2_bt/: CMakeLists.txt  README.md  package.xml
src/meta_packages/a2_bt/behavior_trees/: approach_and_photo.xml  challenge.xml  challenge_light.xml  challenge_simulation.xml  dlio_reset_loop.xml  explore.xml  navigate_loop.xml  navigate_to_pose.xml  object_exploration.xml  twist_loop.xml
src/meta_packages/a2_bt/config/: bt_executor.yaml
src/meta_packages/a2_bt/include/a2_bt/: approach_object.hpp  call_empty_service.hpp  call_trigger_service.hpp  create_pose.hpp  detection_mapper.hpp  get_object_pose.hpp  is_exploration_finished.hpp  navigate_to_pose_action.hpp  offset_pose.hpp  publish_twist.hpp  save_image.hpp  save_map.hpp  save_pose.hpp  set_mode.hpp  start_exploration.hpp  stop_exploration.hpp  stop_movement.hpp  wait_for_exploration_finish.hpp
src/meta_packages/a2_bt/launch/: bt_executor.launch.py
src/meta_packages/a2_bt/plugins/: approach_object.cpp  call_empty_service.cpp  call_trigger_service.cpp  create_pose.cpp  get_object_pose.cpp  is_exploration_finished.cpp  navigate_to_pose_action.cpp  offset_pose.cpp  publish_twist.cpp  save_image.cpp  save_map.cpp  save_pose.cpp  set_mode.cpp  start_exploration.cpp  stop_exploration.cpp  stop_movement.cpp  wait_for_exploration_finish.cpp
src/meta_packages/a2_bt/src/: bt_executor.cpp  detection_mapper.cpp
src/meta_packages/a2_ros/: CMakeLists.txt  package.xml
src/meta_packages/a2_ros/config/: config_front.yaml
src/meta_packages/a2_ros/config/autonomy/: alo_a2.yaml  far_a2.yaml  maze3_boundary.ply  navigation_a2.yaml  tare_a2.yaml
src/meta_packages/a2_ros/config/dlio/: params_a2.yaml
src/meta_packages/a2_ros/config/resple/: params_a2.yaml  resple_ss26.yaml
src/meta_packages/a2_ros/config/twist_mux/: twist_mux_locks.yaml  twist_mux_topics.yaml
src/meta_packages/a2_ros/launch/: autonomy.launch.py  bag_replay.launch.py  bag_replay_dlio.launch.py  dlio.launch.py  exploration.launch.py  full_nuc.launch.py  full_sim.launch.py  navigate_and_explore.launch.py  navigation.launch.py  nuc.launch.py  rectify.launch.py  resple.launch.py  twist_mux.launch.py  view_bag.launch.py
src/meta_packages/a2_ros/rviz/: default.rviz  exploration.rviz  navigation.rviz
src/meta_packages/a2_ros/scripts/: alo.py  frontier_explorer.py  plot_challenge_results.py
src/meta_packages/a2_ros/src/: alo.cpp  registered_scan_pub.cpp  sim_lidar_adapter.cpp  waypoint_mux.cpp
tuning_guideline/: CONFIG_TUNING_FAR.md  CONFIG_TUNING_LocalPlanner.md  CONFIG_TUNING_TARE.md  CONFIG_TUNING_Terrain.md  CONFIG_TUNING_Terrain_Ext.md
